max-width 944px fixing the mobile nav we should set the overflow-x : hidden in body not header set the height for main-nav class to 100vh not 100%

--- a/css/queries.css
+++ b/css/queries.css
@@ -134,7 +134,7 @@ Instead, 1 rem = 1 em = 16px
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     display: flex;
     justify-content: center;
